# FALCON_CC_SPA

./: .dockerignore  .gitignore  .gitmodules  ARTIFACT.md  Dockerfile  Dockerfile.cc  Dockerfile.falcon  Dockerfile.fpr_add_region_plot  LICENSE  README.md  THIRD_PARTY_NOTICES.md
configs/: capture.yaml  default.yaml  main_cc.yaml  main_falcon.yaml
csrc/: CMakeLists.txt
csrc/Inputdata/: leak.c  make_group.c  make_input.c
csrc/PostProcessing/: fft.cxx  fft.hxx  main.cxx  main_test.cxx
csrc/SPA/: cc_spa.c  fpr_spa.c
csrc/include/: main.h
fw/SPA_CC/: FALCON_SPA_O0-CW308_STM32F4.elf  FALCON_SPA_O0-CW308_STM32F4.hex  FALCON_SPA_O1-CW308_STM32F4.elf  FALCON_SPA_O1-CW308_STM32F4.hex  FALCON_SPA_O2-CW308_STM32F4.elf  FALCON_SPA_O2-CW308_STM32F4.hex  FALCON_SPA_O3-CW308_STM32F4.elf  FALCON_SPA_O3-CW308_STM32F4.hex  FALCON_SPA_Os-CW308_STM32F4.elf  FALCON_SPA_Os-CW308_STM32F4.hex
fw/SPA_FALCON/: FALCON_fpr_SPA-CW308_STM32F4.hex  FALCON_fpr_SPA-CW308_STM32F4.lss
python/: fpr_add_region_plot.py  main_cc.py  main_falcon.py  requirements.txt  spa_fpr.py  spa_fpr_multiadd.py  wrongcandidate.py
python/capture/: cc_gettrace.py  falcon_gettrace.py  requirements_capture.txt
